# advice_generator

./: README.md  __init__.py  main.py  pyproject.toml
app/: app.py
app/advices/: advices.json
tests/: test_main.py
