[tool.poetry]
name = "advice-generator"
version = "0.1.0"
description = ""
authors = ["Marlisson <marlisson.business@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
